Worked on delete route and checking userLevel.
